--- a/2-CSS-Basics/Challenges/Setup-Challenge.css
+++ b/2-CSS-Basics/Challenges/Setup-Challenge.css
@@ -1,8 +1,8 @@
 /*This is a CSS comment*/
 body {
-    background-color: #D3D3D3;
+    background-color: #da3411;
 }
 /*This is another CSS comment*/
 .wrapper {
-    border: 10px solid red;
+    border: 50px dashed black;
 }
