--- a/2-CSS-Basics/Challenges/Classes-Challenge.css
+++ b/2-CSS-Basics/Challenges/Classes-Challenge.css
@@ -1,6 +1,7 @@
 /* rule-set #1: Everything within the body tag will have a blue background. */
 body {
-    background-color: blue;
+    background-color: purple;
+    text-align: center;
 }
 
 /* rule-set #2: Everything within a css-classes class will have a lightgray background. */
@@ -11,6 +12,8 @@ body {
 /* rule-set #3: All h1 tags within the css-classes class will have a font-size of 18 pixels. */
 .css-classes h1{
     font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: bold;
 }
 
 /* rule-set #4: ALL of the p tags within a css-classes class will have green font 16 pixels high */
@@ -23,4 +26,11 @@ body {
 
 .css-classes li{
     color: navy;
+    text-align: left;
+}
+
+body h1{
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-style: bold;
 }
